--- a/runner/pom.xml
+++ b/runner/pom.xml
@@ -14,7 +14,7 @@
 
     <properties>
         <!-- Bring in newer Spring with support for annotations, used for Page Object tests -->
-        <spring.version>4.1.8.RELEASE</spring.version>
+        <spring.version>4.3.17</spring.version>
     </properties>
 
     <profiles>
