--- a/runner/pom.xml
+++ b/runner/pom.xml
@@ -12,10 +12,9 @@
         <version>1.0</version>
     </parent>
 
-    <properties>
-        <!-- Bring in newer Spring with support for annotations, used for Page Object tests -->
+    <!--<properties>
         <spring.version>4.3.18</spring.version>
-    </properties>
+    </properties>-->
 
     <profiles>
         <profile>
